security-group.tf
resource "aws_security_group" "nginx" {
  name = "nginx"
  description = "Security group that allows ssh, nginx web server and all egress traffic"
  egress {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 22
      to_port = 22
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 80
      to_port = 80
      protocol = "http"
      cidr_blocks = ["0.0.0.0/0"]
  }
tags = {
    Name = "nginx"
  }
}
